[OJS.de lucene - part II - ap1] Initial search UI re-design.

--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -356,24 +356,27 @@
 	<message key="notification.unsubscribeError">There was an error unsubscribing you.  Please ensure that you are using the correct URL as included in your notification email.</message>
 	<message key="notification.unsubscribeSuccess">You were successfully unsubscribed.</message>
 	<message key="search.abstract">Abstract</message>
+	<message key="search.activeFilters">Advanced filters</message>
+	<message key="search.advancedSearchMore">Additional Search Options (click to show)</message>
+	<message key="search.advancedSearchLess">Additional Search Options (click to hide)</message>
 	<message key="search.allFields">All</message>
 	<message key="search.coverage">Coverage</message>
-	<message key="search.date">Date</message>
+	<message key="search.date">Publication Date</message>
 	<message key="search.dateFrom">From</message>
 	<message key="search.dateTo">Until</message>
+	<message key="search.deleteFilter">Delete</message>
 	<message key="search.discipline">Discipline(s)</message>
 	<message key="search.fullText">Full Text</message>
 	<message key="search.indexTerms">Index terms</message>
+	<message key="search.indexTermsLong">All index term fields</message>
 	<message key="search.matchAll">Match all categories</message>
 	<message key="search.noKeywordError">You must enter at least one search keyword.</message>
 	<message key="search.noResults">No Results</message>
 	<message key="search.operator.and">and</message>
 	<message key="search.operator.not">not</message>
 	<message key="search.operator.or">or</message>
-	<message key="search.reviseSearch">Revise Search</message>
-	<message key="search.searchAllCategories">Search all categories for</message>
+	<message key="search.searchAllCategories">Search for</message>
 	<message key="search.searchCategories">Search categories</message>
-	<message key="search.searchResults">Search Results</message>
 	<message key="search.subject">Keyword(s)</message>
 	<message key="search.titleIndex">Browse Title Index</message>
 	<message key="search.title">Title</message>
