Moved download file grid action locale to common, since we need to use it outside grids

--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -375,4 +375,8 @@
 	<message key="search.titleIndex">Browse Title Index</message>
 	<message key="search.title">Title</message>
 	<message key="search.typeMethodApproach">Type (method/approach)</message>
+	
+	<!-- Common -->
+	<message key="grid.action.downloadFile">Download this file</message>
+	
 </locale>
