--- a/pkp-lib/locale/da_DK/user.xml
+++ b/pkp-lib/locale/da_DK/user.xml
@@ -115,4 +115,14 @@
 	<message key="user.repeatPassword">Gentag adgangskode</message>
 	<message key="user.profile.form.affiliationRequired">Kræver et tilhørsforhold.</message>
 	<message key="user.register.form.emailsDoNotMatch">Felterne for e-mail-adresse stemmer ikke overens.</message>
+	<message key="user.accountInformation">Kontoinformation</message>
+	<message key="user.authorization.pressManagerRequired">En bruger med rollen som pressechef (f.eks. presse- eller produktionsredaktør) skal indskrives, før du kan gå videre.</message>
+	<message key="user.interests.description">(Adskil interesser ved at trykke på Enter- eller komma-tasten)</message>
+	<message key="user.group">Brugergruppe</message>
+	<message key="user.hello">Hej</message>
+	<message key="user.profile.form.countryRequired">Et land er påkrævet</message>
+	<message key="user.profile.form.mailingAddressRequired">En e-mailadresse er påkrævet.</message>
+	<message key="user.profile.form.passwordSameAsOld">Din nye adgangskode er den samme som din gamle adgangskode.</message>
+	<message key="user.profile.form.usergroupRequired">En brugergruppe er påkrævet.</message>
+	<message key="user.suffix">Suffiks</message>
 </locale>
