--- a/pkp-lib/locale/da_DK/admin.xml
+++ b/pkp-lib/locale/da_DK/admin.xml
@@ -38,7 +38,6 @@
 	<message key="admin.languages.reload">Genindlæs landestandard</message>
 	<message key="admin.languages.uninstall">Fjern landestandard</message>
 	<message key="admin.phpInfo">Detaljerede oplysninger om PHP</message>
-	<message key="admin.saveSystemConfig">Gem konfiguration</message>
 	<message key="admin.server.apacheVersion">Apache-version</message>
 	<message key="admin.server.dbDriver">Databasedriver</message>
 	<message key="admin.server.dbVersion">Version af databaseserver</message>
@@ -81,4 +80,7 @@
 	<message key="admin.version.updateAvailable">Der findes en opdateret version</message>
 	<message key="admin.version.upToDate">Systemet er opdateret</message>
 	<message key="admin.version">Version</message>
+	<message key="admin.settings">Indstillinger</message>
+	<message key="admin.settings.siteTheme">Website tema</message>
+	<message key="admin.siteSetup">Website opsætning</message>
 </locale>
