--- a/pkp-lib/locale/da_DK/common.xml
+++ b/pkp-lib/locale/da_DK/common.xml
@@ -112,7 +112,6 @@
 	<message key="common.notAvailable">Ikke tilgængelig</message>
 	<message key="common.note">Note</message>
 	<message key="common.notes">Noter</message>
-	<message key="common.notify">Giv besked</message>
 	<message key="common.off">Fra</message>
 	<message key="common.on">Til</message>
 	<message key="common.options">Indstillinger</message>
@@ -267,7 +266,6 @@
 	<message key="search.titleIndex">Gennemse titelindeks</message>
 	<message key="search.title">Titel</message>
 	<message key="search.typeMethodApproach">Type (metode/fremgangsmåde)</message>
-	<message key="common.actingAsUserGroup.userIsNotInTargetUserGroup">Du er ikke med i denne brugergruppe</message>
 	<message key="common.ccLicense"><![CDATA[<br /><br />
 		<a target="_new" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
 			<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png"/>
@@ -323,7 +321,54 @@
 	<message key="notification.reminderError">Der opstod en fejl i forbindelse med afsendelsen af din adgangskode. Kontrollér, at du har indtastet din e-mail-adresse korrekt.</message>
 	<message key="notification.reminderSent">Din nye adgangskode er blevet sendt til den e-mail-adresse, du har angivet.</message>
 	<message key="notification.unsubscribe">Afmeld abonnement</message>
-	<message key="notification.unsubscribeDescription">Indtast e-mail-adresse og adgangskode herunder for at afmelde meddelelser via e-mail. Hvis du ikke kan huske din adgangskode, kan du lade feltet stå blankt, og så vil der blive sendt en ny kode til den e-mail-adresse, du har angivet.</message>
 	<message key="notification.unsubscribeError">Der opstod en fejl i forbindelse med afmeldelsen af dit abonnement. Kontrollér, at e-mail-adresse og adgangskode er korrekte.</message>
 	<message key="notification.unsubscribeSuccess">Din afmelding af abonnementet er gennemført.</message>
+	<message key="announcement.postedOn">Sendt den {$postDate}</message>
+	<message key="common.accepted">Accepteret</message>
+	<message key="common.acknowledged">Anerkendt</message>
+	<message key="common.titleSmallWords">af en et den det eller men er hvis så ellers når fra af til fra for i ude over til ind med</message>
+	<message key="common.warning">Advarsel</message>
+	<message key="common.confirm">Bekræft</message>
+	<message key="common.content">Tilfreds</message>
+	<message key="common.considered">Overvejet</message>
+	<message key="common.declined">Afslået</message>
+	<message key="common.finish">Afslut</message>
+	<message key="common.go">Start</message>
+	<message key="common.less">Mindre</message>
+	<message key="common.billingAddress">Faktureringsadresse</message>
+	<message key="common.more">Mere</message>
+	<message key="common.notified">Meddelt</message>
+	<message key="common.noMatches">Ingen match</message>
+	<message key="common.overdue">Forsinket</message>
+	<message key="common.reminder">Påmindelse</message>
+	<message key="common.remote">Fjern</message>
+	<message key="common.remoteURL">EksternURL</message>
+	<message key="common.reset">Nulstil</message>
+	<message key="common.signoff">Afmeld</message>
+	<message key="common.element">Element</message>
+	<message key="common.unread">Ulæst</message>
+	<message key="common.fileUpload.maxFileSizeStatus"><![CDATA[Denne server tillader en maksimum filstørrelse på {$fileSize}. Om nødvendigt, kontakt <a href="mailto:{$supportEmail}">{$supportName}</a> for hjælp.]]></message>
+	<message key="common.invalidFileType">Filen blev ikke uploadet eller filen er ugyldig</message>
+	<message key="common.plugins">Plug-ins</message>
+	<message key="email.subjectRequired">Udfyld venligst e-mailens emnefelt</message>
+	<message key="email.bodyRequired">Indskriv venligst tekst i e-mailens tekstfelt</message>
+	<message key="form.confirmSubmit">Er du sikker på, at du vil sende denne formular?</message>
+	<message key="form.confirmSubmit.title">Bekræft</message>
+	<message key="form.emailRequired">En e-mail-adresse er påkrævet</message>
+	<message key="form.dataHasChanged">Dataene i denne formular er ændret. Fortsæt alligevel?</message>
+	<message key="form.invalidImage">Et ugyldigt billede blev uploadet. De accepterede formater er .png, .gif eller .jpg</message>
+	<message key="help.toggleInlineHelpOn">Hjælp slået til</message>
+	<message key="help.toggleInlineHelpOff">Hjælp slået fra</message>
+	<message key="navigation.website">Website</message>
+	<message key="navigation.access"><![CDATA[Brugere &amp; roller]]></message>
+	<message key="navigation.admin">Administration</message>
+	<message key="navigation.browseByAuthor">Efter forfatter</message>
+	<message key="navigation.data">Data</message>
+	<message key="navigation.publicMenu">Public Menu</message>
+	<message key="navigation.settings">Indstillinger</message>
+	<message key="navigation.setup">Opsætning</message>
+	<message key="navigation.sitemap">Sitemap</message>
+	<message key="navigation.submissions">Indsendelser</message>
+	<message key="navigation.system">System</message>
+	<message key="navigation.userManagement">Brugerstyring</message>
 </locale>
