--- a/pkp-lib/locale/da_DK/grid.xml
+++ b/pkp-lib/locale/da_DK/grid.xml
@@ -22,8 +22,6 @@
 	<message key="grid.action.remove">Remove</message>
 	<message key="grid.action.edit">Edit</message>
 	<message key="grid.action.approve">Approve</message>
-	<message key="grid.action.approveForReview">Submit to Review Stage</message>
-	<message key="grid.action.approveForPub">Approve for Publication</message>
 	<message key="grid.action.decline">Decline</message>
 	<message key="grid.action.moreInformation">More Information</message>
 	<message key="grid.action.restoreDefaults">Restore Defaults</message>
@@ -37,9 +35,6 @@
 	<message key="grid.sponsor.title">Sponsors</message>
 
 	<!-- Masthead Grid -->
-	<message key="grid.masthead.title">Masthead</message>
-	<message key="grid.masthead.column.groups">Groups</message>
-
 	<!-- Contributor Grid -->
 	<message key="grid.contributor.title">Contributor</message>
 	<message key="grid.action.addAuthor">Add Author</message>
@@ -48,27 +43,7 @@
 	<message key="grid.reviewForm.title">Review Forms</message>
 
 	<!-- Book File Types Grid -->
-	<message key="grid.bookFileType.form.sortable">Allow files of this type to be sorted by component (e.g. by chapter)</message>
-
 	<!-- Artwork Files Grid -->
-	<message key="grid.artworkFile.title">Artwork w/Permissions</message>
-	<message key="grid.artworkFile.file">File</message>
-	<message key="grid.artworkFile.form.title">Add Artwork w/Permissions</message>
-	<message key="grid.artworkFile.form.metadata">Artwork Metadata</message>
-	<message key="grid.artworkFile.caption">Caption</message>
-	<message key="grid.artworkFile.credit">Credit</message>
-	<message key="grid.artworkFile.captionAndCredit">Caption and Credit (If Not Included in the File)</message>
-	<message key="grid.artworkFile.copyrightOwner">Copyright Owner</message>
-	<message key="grid.artworkFile.copyrightContact">Contact Info (if not author/publisher)</message>
-	<message key="grid.artworkFile.permissionTerms">Permission Terms</message>
-	<message key="grid.artworkFile.permissionForm">Permission Form</message>
-	<message key="grid.artworkFile.type">Type</message>
-	<message key="grid.artworkFile.type.table">Table</message>
-	<message key="grid.artworkFile.type.figure">Figure</message>
-	<message key="grid.artworkFile.placement">Placement in book</message>
-	<message key="grid.artworkFile.placementDetail">Table/Fig. No.</message>
-	<message key="grid.artworkFile.contactAuthor">Contact Author</message>
-
 	<!-- Library Files -->
 	<message key="grid.libraryFiles.column.files">Files</message>
 	<message key="grid.libraryFiles.submission.title">Submission Library</message>
@@ -88,9 +63,134 @@
 	<message key="author.users.contributor.principalContact">Primary Contact</message>
 
 	<!-- Review Attachments -->
-	<message key="grid.reviewAttachments.title">Reviewer's Attachments</message>
-	<message key="grid.reviewAttachments.add">Add Attachment to Review</message>
-
 	<!-- Chapters -->
-	<message key="grid.chapters.title">Chapters</message>
+	<message key="grid.action.addUser">Tilføj bruger</message>
+	<message key="grid.action.deleteFile">Slet fil</message>
+	<message key="grid.action.deleteMedia">Slet medie</message>
+	<message key="grid.action.editAuthor">Redigér forfatter</message>
+	<message key="grid.action.deleteAuthor">Slet forfatter</message>
+	<message key="grid.action.addAuditor">Tilføj en revisor</message>
+	<message key="grid.action.upgrade">Opgradér</message>
+	<message key="grid.action.order">Bestil</message>
+	<message key="grid.action.cancelOrdering">Annullér bestilling</message>
+	<message key="grid.action.extendAll">Forlæng alle</message>
+	<message key="grid.action.collapse">Collapse</message>
+	<message key="grid.action.collapseAll">Collapse all</message>
+	<message key="grid.action.wizard">Indstillingsguide</message>
+	<message key="grid.action.editMedia">Rediger medie</message>
+	<message key="grid.action.moveItem">Flyt element</message>
+	<message key="grid.action.downloadFile">Download denne fil</message>
+	<message key="grid.action.downloadAll">Download alle filer som arkiv</message>
+	<message key="grid.action.readReview">Læs denne bedømmelse</message>
+	<message key="grid.action.email">Send e-mail</message>
+	<message key="grid.action.addReviewer">Tilføj en bedømmer</message>
+	<message key="grid.action.addFile">Tilføj en fil</message>
+	<message key="grid.action.editFile">Rediger en fil</message>
+	<message key="grid.action.selectFiles">Select files to manage</message>
+	<message key="grid.action.requestRevisions">Anmod om revidering af dette manuskript</message>
+	<message key="grid.action.resubmit">Anmod om at dette manuskript bliver genfremsendt</message>
+	<message key="grid.action.accept">Accepter dette manuskript</message>
+	<message key="grid.action.internalReview">Send dette manuskript til intern bedømmelse</message>
+	<message key="grid.action.externalReview">Send dette manuskript til ekstern bedømmelse</message>
+	<message key="grid.action.sendToProduction">Send dette manuskript til produktion</message>
+	<message key="grid.action.settings">Indstillinger</message>
+	<message key="grid.action.importexport">Importer eller eksporter indhold eller websitedata</message>
+	<message key="grid.action.orderItems">Aktiver bestillingsform</message>
+	<message key="grid.action.editSubmissionChecklist">Rediger dette tjeklistepunkt</message>
+	<message key="grid.action.deleteSubmissionChecklist">Slet dette tjeklistepunkt</message>
+	<message key="grid.action.resetAll">Genindstil alle punkter til standardværdier</message>
+	<message key="grid.action.addPreparedEmail">Tilføj en ny e-mail-skabelon</message>
+	<message key="grid.action.editPreparedEmail">Rediger denne e-mail-skabelon</message>
+	<message key="grid.action.disableEmail">Deaktiver denne e-mail-skabelon</message>
+	<message key="grid.action.resetEmail">Genindstil denne e-mail-skabelon til standardindstilling</message>
+	<message key="grid.action.addSignoff">Add an audit response for this file</message>
+	<message key="grid.action.deleteSignoff">Delete this signoff</message>
+	<message key="grid.action.fileSignoff">Signoff on this file</message>
+	<message key="grid.action.readSignoff">Read this signoff</message>
+	<message key="grid.action.expandAll">Udfold alle</message>
+	<message key="grid.action.requestAccount">Tilføj en deltager</message>
+	<message key="grid.action.expand">Udfold</message>
+	<message key="grid.action.notify">Underret denne bruger</message>
+	<message key="grid.action.addUserGroup">Tilføj en ny brugergruppe</message>
+	<message key="grid.action.editUserGroup">Rediger denne brugergruppe</message>
+	<message key="grid.action.disable">Deaktiver</message>
+	<message key="grid.action.details">Se dette punkt</message>
+	<message key="grid.action.enrolExisting">Tilmeld en eksisterende bruger som bedømmer</message>
+	<message key="grid.action.selectCreate">Opret en ny bedømmer</message>
+	<message key="grid.action.advancedSearch">Udvidet søgning</message>
+	<message key="grid.action.viewMetadata">Se dette manuskripts metadata</message>
+	<message key="grid.action.sendReminder">Send en påmindelse til denne bruger</message>
+	<message key="grid.action.newRound">Opret en ny omgang</message>
+	<message key="grid.action.viewReviewGuidelines">Se retningslinjer for bedømmelser</message>
+	<message key="grid.action.viewCompetingInterestGuidelines">Se retningslinjer for konkurrerende interessepolitikker</message>
+	<message key="grid.action.thankReviewer">Send en tak til bedømmer</message>
+	<message key="grid.action.uploadFile">Upload en fil</message>
+	<message key="grid.action.addAnnouncementType">Tilføj meddelelsestype</message>
+	<message key="grid.action.addAnnouncement">Tilføj meddelelser</message>
+	<message key="grid.action.mergeUser">Flet brugere</message>
+	<message key="grid.action.unassignUser">Afmeld bruger</message>
+	<message key="grid.action.history">Se oversigt</message>
+	<message key="grid.task.status.completed">Denne opgave er færdiggjort</message>
+	<message key="grid.task.status.new">Dette er et nyt punkt, der kræver opmærksomhed</message>
+	<message key="grid.task.status.uploaded">Kolonnetitlen viser hvem der uploadede denne fil</message>
+	<message key="grid.task.status.unfinished">Bedømmelse uafsluttet</message>
+	<message key="grid.task.status.reviewReady">Denne bedømmelse er klar. Klik notat-ikonet til venstre for at læse den.</message>
+	<message key="grid.columns.auditor">Auditor</message>
+	<message key="grid.columns.locale">Landestandard</message>
+	<message key="grid.action.addSponsor">Tilføj sponsor</message>
+	<message key="grid.action.deleteSponsor">Slet sponsor</message>
+	<message key="grid.action.editSponsor">Rediger sponsor</message>
+	<message key="grid.action.addSeries">Tilføj serie</message>
+	<message key="grid.action.editSeries">Rediger serie</message>
+	<message key="grid.action.deleteSeries">Slet serie</message>
+	<message key="grid.action.addCategory">Tilføj kategori</message>
+	<message key="grid.action.editCategory">Rediger kategori</message>
+	<message key="grid.action.deleteCategory">Slet kategori</message>
+	<message key="grid.action.addContributor">Tilføj bidragyder</message>
+	<message key="grid.action.editContributor">Rediger bidragyder</message>
+	<message key="grid.action.deleteContributor">Slet bidragyder</message>
+	<message key="grid.genres.title">Genre</message>
+	<message key="grid.genres.description">Genrene bruges ved tildeling af filnavn og fremvises i en drop-down-menu under upload af filer. De udvalgte genre ## tillader brugeren at forbinde filen med enten hele bogen 99Z eller et specifikt kapitel med nummer (f.eks. 02).</message>
+	<message key="grid.noFiles">Ingen filer</message>
+	<message key="grid.roles.currentRoles">Nuværende roller</message>
+	<message key="grid.roles.add">Tilføj rolle</message>
+	<message key="grid.roles.stageAssignment">Stage Assignment</message>
+	<message key="grid.user.currentUsers">Nuværende brugere</message>
+	<message key="grid.user.currentEnrollment">Nuværende tilmeldte</message>
+	<message key="grid.user.allRoles">Alle roller</message>
+	<message key="grid.user.add">Tilføj bruger</message>
+	<message key="grid.user.enroll">Tilmeld bruger</message>
+	<message key="grid.user.edit">Rediger bruger</message>
+	<message key="grid.user.email">E-mail</message>
+	<message key="grid.user.enable">Aktiver</message>
+	<message key="grid.user.disable">Deaktiver</message>
+	<message key="grid.user.disableReason">Grund til deaktivering af bruger</message>
+	<message key="grid.user.enableReason">Grund til aktivering af bruger</message>
+	<message key="grid.user.error">En fejl blev fundet i forbindelse med behandling af denne bruger. Prøv igen.</message>
+	<message key="grid.user.errorEmail">En fejl blev fundet under fremsendelse af denne e-mail. Tjek venligst din mailserver-konfiguration og/eller kontakt din systemadministrator.</message>
+	<message key="grid.user.cannotAdminister">Du har ikke tilladelse til at redigere denne bruger</message>
+	<message key="grid.user.authSource">Godkendelseskilde</message>
+	<message key="grid.user.mustProvideName">Tilføj som minimum først brugerens efternavn</message>
+	<message key="grid.user.generatePassword">Opret adgangskode</message>
+	<message key="grid.user.generatePasswordDescription">Opret en tilfældig adgangskode til denne bruger</message>
+	<message key="grid.user.notifyUser">Meddel bruger</message>
+	<message key="grid.user.notifyUserDescription">Send brugeren en velkomst-e-mail</message>
+	<message key="grid.user.mustChangePassword">Skift adgangskode</message>
+	<message key="grid.user.mustChangePasswordDescription">Bruger skal ændre adgangskode ved næste login</message>
+	<message key="grid.user.mustChangePasswordDescriptionOld">Bed brugeren om at ændre sin adgangskode, næste gang vedkommende logger på.</message>
+	<message key="grid.user.moreDetails">Flere brugerdetaljer</message>
+	<message key="grid.user.lessDetails">Færre brugerdetaljer</message>
+	<message key="grid.user.userDetails">Brugerdetaljer</message>
+	<message key="grid.user.userRoles">Brugerroller</message>
+	<message key="grid.user.userNoRoles">Denne bruger har ikke fået tildelt nogen rolle.</message>
+	<message key="grid.user.step1">Trin #1: Udfyld brugerdetaljer</message>
+	<message key="grid.user.step2">Trin #2: Tilføj brugeroller til {$userFullName}</message>
+	<message key="grid.user.addRoles">Tilføj roller</message>
+	<message key="grid.user.selectUser">Vælg bruger</message>
+	<message key="grid.user.pleaseSelectUser">Vælg en bruger</message>
+	<message key="grid.preparedEmails.title">Forberedte e-mail-skabeloner</message>
+	<message key="grid.preparedEmails.description">Pressen letter workflow-kommunikationen via brugen af forudformulerede e-mail-beskeder. Standardformuleringerne i disse e-mails-skabeloner kan let tilrettes nedenfor.</message>
+	<message key="grid.preparedEmails.currentList">Aktuel liste</message>
+	<message key="grid.plugin.allCategories">Alle kategorier</message>
+	<message key="grid.plugin.disable">Er du sikker på, at du vil deaktivere dette plug-in?</message>
 </locale>
