--- a/pkp-lib/locale/da_DK/installer.xml
+++ b/pkp-lib/locale/da_DK/installer.xml
@@ -59,9 +59,6 @@
 	<message key="installer.installParseDBFileError"><![CDATA[Der opstod en fejl under parsing af databaseinstallationsfilen <tt>{$file}</tt>.]]></message>
 	<message key="installer.locale">Landestandard</message>
 	<message key="installer.localeSettings">Landestandardindstillinger</message>
-	<message key="installer.manualInstall">Manuel installation</message>
-	<message key="installer.manualUpgrade">Manuel opgradering</message>
-	<message key="installer.miscSettings">Diverse indstillinger</message>
 	<message key="installer.oaiRepositoryIdInstructions"><![CDATA[Et entydigt id, som bruges til at identificere metadataposter, der er indekseret fra dette websted ved hjælp af <a href="http://www.openarchives.org/" target="_blank">Open Archives Initiative</a> Protocol for Metadata Harvesting.]]></message>
 	<message key="installer.oaiRepositoryId">Id til OAI-lager</message>
 	<message key="installer.publicFilesDirError">Den offentlige filmappe findes ikke eller er ikke skrivbar.</message>
@@ -69,5 +66,6 @@
 	<message key="installer.securitySettings">Sikkerhedsindstillinger</message>
 	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[Fejl ved parsing af e-mail-skabelonfil <tt>{$file}</tt>.]]></message>
 	<message key="installer.locale.maybeIncomplete">De markerede landestandarder kan være ufuldstændige.</message>
-	<message key="installer.pleaseUpgradeAfterManualInstall">Kør opgraderingsværktøjet, når du har installeret din database. Udfør 'php tools/upgrade.php upgrade' inde fra hovedinstallationsmappen.</message>
+	<message key="installer.installParseFilterConfigFileError"><![CDATA[Error parsing the filter configuration file <tt>{$file}</tt>.]]></message>
+	<message key="installer.oaiSettings">OAI indstilling</message>
 </locale>
