--- a/pkp-lib/locale/da_DK/reader.xml
+++ b/pkp-lib/locale/da_DK/reader.xml
@@ -174,4 +174,5 @@
 	<message key="rt.admin.sharing.logoColorLabel">Logo-farve</message>
 	<message key="rt.admin.configureSharing">Konfigurer AddThis</message>
 	<message key="rt.captureCite.web">Web</message>
+	<message key="rt.admin.settings.viewReviewPolicy">Se bedømmelsespolitik</message>
 </locale>
